3822B1FI2/3_acc_jacobi_oneapi/vyunova_ekaterina/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/3_acc_jacobi_oneapi/vyunova_ekaterina/acc_jacobi_oneapi.cpp:18:31: warning: parentheses were disambiguated as a function declaration [-Wvexing-parse]
   18 |     sycl::buffer<float> x2_buf(sycl::range<1>(n));
      |                               ^~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/3_acc_jacobi_oneapi/vyunova_ekaterina/acc_jacobi_oneapi.cpp:18:32: note: add a pair of parentheses to declare a variable
   18 |     sycl::buffer<float> x2_buf(sycl::range<1>(n));
      |                                ^                
      |                                (                )
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/3_acc_jacobi_oneapi/vyunova_ekaterina/acc_jacobi_oneapi.cpp:21:26: error: cannot initialize a variable of type 'sycl::buffer<float> *' with an rvalue of type 'sycl::buffer<float> (*)(sycl::range<1>)'
   21 |     sycl::buffer<float>* x_next = &x2_buf;
      |                          ^        ~~~~~~~
1 warning and 1 error generated.
